################################################################################
# libstc/Makefile.am
#
# Part of CryptoTE v0.5.999, see http://panthema.net/2007/cryptote
#
# Copyright (C) 2008-2014 Timo Bingmann <tb@panthema.net>
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
# Place, Suite 330, Boston, MA 02111-1307 USA
################################################################################

noinst_LIBRARIES = libstc.a

libstc_a_SOURCES = \
	scintilla/include/ILexer.h \
	scintilla/include/Platform.h \
	scintilla/include/SciLexer.h \
	scintilla/include/Scintilla.h \
	scintilla/include/ScintillaWidget.h \
	scintilla/lexers/LexA68k.cxx \
	scintilla/lexers/LexAPDL.cxx \
	scintilla/lexers/LexASY.cxx \
	scintilla/lexers/LexAU3.cxx \
	scintilla/lexers/LexAVE.cxx \
	scintilla/lexers/LexAbaqus.cxx \
	scintilla/lexers/LexAda.cxx \
	scintilla/lexers/LexAsm.cxx \
	scintilla/lexers/LexAsn1.cxx \
	scintilla/lexers/LexBaan.cxx \
	scintilla/lexers/LexBash.cxx \
	scintilla/lexers/LexBasic.cxx \
	scintilla/lexers/LexBullant.cxx \
	scintilla/lexers/LexCLW.cxx \
	scintilla/lexers/LexCOBOL.cxx \
	scintilla/lexers/LexCPP.cxx \
	scintilla/lexers/LexCSS.cxx \
	scintilla/lexers/LexCaml.cxx \
	scintilla/lexers/LexCmake.cxx \
	scintilla/lexers/LexConf.cxx \
	scintilla/lexers/LexCrontab.cxx \
	scintilla/lexers/LexCsound.cxx \
	scintilla/lexers/LexD.cxx \
	scintilla/lexers/LexEScript.cxx \
	scintilla/lexers/LexEiffel.cxx \
	scintilla/lexers/LexErlang.cxx \
	scintilla/lexers/LexFlagship.cxx \
	scintilla/lexers/LexForth.cxx \
	scintilla/lexers/LexFortran.cxx \
	scintilla/lexers/LexGAP.cxx \
	scintilla/lexers/LexGui4Cli.cxx \
	scintilla/lexers/LexHTML.cxx \
	scintilla/lexers/LexHaskell.cxx \
	scintilla/lexers/LexInno.cxx \
	scintilla/lexers/LexKix.cxx \
	scintilla/lexers/LexLisp.cxx \
	scintilla/lexers/LexLout.cxx \
	scintilla/lexers/LexLua.cxx \
	scintilla/lexers/LexMMIXAL.cxx \
	scintilla/lexers/LexMPT.cxx \
	scintilla/lexers/LexMSSQL.cxx \
	scintilla/lexers/LexMagik.cxx \
	scintilla/lexers/LexMarkdown.cxx \
	scintilla/lexers/LexMatlab.cxx \
	scintilla/lexers/LexMetapost.cxx \
	scintilla/lexers/LexModula.cxx \
	scintilla/lexers/LexMySQL.cxx \
	scintilla/lexers/LexNimrod.cxx \
	scintilla/lexers/LexNsis.cxx \
	scintilla/lexers/LexOpal.cxx \
	scintilla/lexers/LexOthers.cxx \
	scintilla/lexers/LexPB.cxx \
	scintilla/lexers/LexPLM.cxx \
	scintilla/lexers/LexPOV.cxx \
	scintilla/lexers/LexPS.cxx \
	scintilla/lexers/LexPascal.cxx \
	scintilla/lexers/LexPerl.cxx \
	scintilla/lexers/LexPowerPro.cxx \
	scintilla/lexers/LexPowerShell.cxx \
	scintilla/lexers/LexProgress.cxx \
	scintilla/lexers/LexPython.cxx \
	scintilla/lexers/LexR.cxx \
	scintilla/lexers/LexRebol.cxx \
	scintilla/lexers/LexRuby.cxx \
	scintilla/lexers/LexSML.cxx \
	scintilla/lexers/LexSQL.cxx \
	scintilla/lexers/LexScriptol.cxx \
	scintilla/lexers/LexSmalltalk.cxx \
	scintilla/lexers/LexSorcus.cxx \
	scintilla/lexers/LexSpecman.cxx \
	scintilla/lexers/LexSpice.cxx \
	scintilla/lexers/LexTACL.cxx \
	scintilla/lexers/LexTADS3.cxx \
	scintilla/lexers/LexTAL.cxx \
	scintilla/lexers/LexTCL.cxx \
	scintilla/lexers/LexTeX.cxx \
	scintilla/lexers/LexTxt2tags.cxx \
	scintilla/lexers/LexVB.cxx \
	scintilla/lexers/LexVHDL.cxx \
	scintilla/lexers/LexVerilog.cxx \
	scintilla/lexers/LexYAML.cxx \
	scintilla/lexlib/Accessor.cxx \
	scintilla/lexlib/Accessor.h \
	scintilla/lexlib/CharacterSet.cxx \
	scintilla/lexlib/CharacterSet.h \
	scintilla/lexlib/LexAccessor.h \
	scintilla/lexlib/LexerBase.cxx \
	scintilla/lexlib/LexerBase.h \
	scintilla/lexlib/LexerModule.cxx \
	scintilla/lexlib/LexerModule.h \
	scintilla/lexlib/LexerNoExceptions.cxx \
	scintilla/lexlib/LexerNoExceptions.h \
	scintilla/lexlib/LexerSimple.cxx \
	scintilla/lexlib/LexerSimple.h \
	scintilla/lexlib/OptionSet.h \
	scintilla/lexlib/PropSetSimple.cxx \
	scintilla/lexlib/PropSetSimple.h \
	scintilla/lexlib/SparseState.h \
	scintilla/lexlib/StyleContext.cxx \
	scintilla/lexlib/StyleContext.h \
	scintilla/lexlib/WordList.cxx \
	scintilla/lexlib/WordList.h \
	scintilla/src/AutoComplete.cxx \
	scintilla/src/AutoComplete.h \
	scintilla/src/CallTip.cxx \
	scintilla/src/CallTip.h \
	scintilla/src/Catalogue.cxx \
	scintilla/src/Catalogue.h \
	scintilla/src/CellBuffer.cxx \
	scintilla/src/CellBuffer.h \
	scintilla/src/CharClassify.cxx \
	scintilla/src/CharClassify.h \
	scintilla/src/ContractionState.cxx \
	scintilla/src/ContractionState.h \
	scintilla/src/Decoration.cxx \
	scintilla/src/Decoration.h \
	scintilla/src/Document.cxx \
	scintilla/src/Document.h \
	scintilla/src/Editor.cxx \
	scintilla/src/Editor.h \
	scintilla/src/ExternalLexer.cxx \
	scintilla/src/ExternalLexer.h \
	scintilla/src/FontQuality.h \
	scintilla/src/Indicator.cxx \
	scintilla/src/Indicator.h \
	scintilla/src/KeyMap.cxx \
	scintilla/src/KeyMap.h \
	scintilla/src/LineMarker.cxx \
	scintilla/src/LineMarker.h \
	scintilla/src/Partitioning.h \
	scintilla/src/PerLine.cxx \
	scintilla/src/PerLine.h \
	scintilla/src/PositionCache.cxx \
	scintilla/src/PositionCache.h \
	scintilla/src/RESearch.cxx \
	scintilla/src/RESearch.h \
	scintilla/src/RunStyles.cxx \
	scintilla/src/RunStyles.h \
	scintilla/src/SVector.h \
	scintilla/src/ScintillaBase.cxx \
	scintilla/src/ScintillaBase.h \
	scintilla/src/Selection.cxx \
	scintilla/src/Selection.h \
	scintilla/src/SplitVector.h \
	scintilla/src/Style.cxx \
	scintilla/src/Style.h \
	scintilla/src/UniConversion.cxx \
	scintilla/src/UniConversion.h \
	scintilla/src/ViewStyle.cxx \
	scintilla/src/ViewStyle.h \
	scintilla/src/XPM.cxx \
	scintilla/src/XPM.h \
	\
	PlatWX.cpp \
	PlatWX.h \
	ScintillaWX.cpp \
	ScintillaWX.h \
	stc.cpp \
	stc.h

EXTRA_DIST = README.txt \
	scintilla/README \
	scintilla/License.txt \
	scintilla/version.txt \
	scintilla/doc/Design.html \
	scintilla/doc/Icons.html \
	scintilla/doc/Lexer.txt \
	scintilla/doc/SciBreak.jpg \
	scintilla/doc/SciCoding.html \
	scintilla/doc/SciRest.jpg \
	scintilla/doc/SciTEIco.png \
	scintilla/doc/SciWord.jpg \
	scintilla/doc/ScintillaDoc.html \
	scintilla/doc/ScintillaDownload.html \
	scintilla/doc/ScintillaHistory.html \
	scintilla/doc/ScintillaRelated.html \
	scintilla/doc/ScintillaToDo.html \
	scintilla/doc/ScintillaUsage.html \
	scintilla/doc/Steps.html \
	scintilla/doc/index.html \
	scintilla/doc/annotations.png \
	scintilla/doc/styledmargin.png

AM_CFLAGS = -W -Wall -D__WX__ -DSCI_LEXER -DSCI_NAMESPACE -I$(srcdir)/scintilla/include -I$(srcdir)/scintilla/lexlib -I$(srcdir)/scintilla/src $(WX_CFLAGS)
AM_CXXFLAGS = -W -Wall -D__WX__ -DSCI_LEXER -DSCI_NAMESPACE -I$(srcdir)/scintilla/include -I$(srcdir)/scintilla/lexlib -I$(srcdir)/scintilla/src $(WX_CXXFLAGS)
