# $Id$

%.h: %.png
	../file2h $< > $@

noinst_HEADERS = \
	application-exit-16.h \
	application-info-16.h \
	document-close-16.h \
	document-delete-16.h \
	document-export-16.h \
	document-import-16.h \
	document-new-16.h \
	document-open-16.h \
	document-password-16.h \
	document-properties-16.h \
	document-revert-16.h \
	document-save-16.h \
	document-save-as-16.h \
	edit-add-16.h \
	edit-clear-16.h \
	edit-copy-16.h \
	edit-cut-16.h \
	edit-find-16.h \
	edit-goto-16.h \
	edit-paste-16.h \
	edit-redo-16.h \
	edit-remove-16.h \
	edit-undo-16.h \
	file-binary-16.h \
	file-binary-32.h \
	file-image-16.h \
	file-image-32.h \
	file-text-16.h \
	file-text-32.h \
	go-down-16.h \
	go-next-16.h \
	go-up-16.h \
	messagebox-error-32.h \
	messagebox-info-32.h \
	messagebox-warning-32.h \
	view-choose-16.h \
	view-detailed-16.h \
	view-icon-16.h \
	view-multicolumn-16.h \
	web-16.h \
	window-close-16.h

EXTRA_DIST = \
	application-exit-16.png \
	application-info-16.png \
	document-close-16.png \
	document-delete-16.png \
	document-export-16.png \
	document-import-16.png \
	document-new-16.png \
	document-open-16.png \
	document-password-16.png \
	document-properties-16.png \
	document-revert-16.png \
	document-save-16.png \
	document-save-as-16.png \
	edit-add-16.png \
	edit-clear-16.png \
	edit-copy-16.png \
	edit-cut-16.png \
	edit-find-16.png \
	edit-goto-16.png \
	edit-paste-16.png \
	edit-redo-16.png \
	edit-remove-16.png \
	edit-undo-16.png \
	file-binary-16.png \
	file-binary-32.png \
	file-image-16.png \
	file-image-32.png \
	file-text-16.png \
	file-text-32.png \
	go-down-16.png \
	go-next-16.png \
	go-up-16.png \
	messagebox-error-32.png \
	messagebox-info-32.png \
	messagebox-warning-32.png \
	view-choose-16.png \
	view-detailed-16.png \
	view-icon-16.png \
	view-multicolumn-16.png \
	web-16.png \
	window-close-16.png
