# $Id$

%.h: %.png
	../file2h -p "gnome-" $< > $@

noinst_HEADERS = \
	application-about-tool.h \
	application-about.h \
	application-exit-tool.h \
	application-exit.h \
	application-preferences-tool.h \
	application-preferences.h \
	container-close.h \
	container-open-tool.h \
	container-open.h \
	container-password.h \
	container-properties-tool.h \
	container-properties.h \
	container-revert-tool.h \
	container-revert.h \
	container-save-as-tool.h \
	container-save-as.h \
	container-save-tool.h \
	container-save.h \
	container-showlist-tool.h \
	container-showlist.h \
	edit-clear-tool.h \
	edit-clear.h \
	edit-copy-tool.h \
	edit-copy.h \
	edit-cut-tool.h \
	edit-cut.h \
	edit-delete-tool.h \
	edit-delete.h \
	edit-find-replace-tool.h \
	edit-find-replace.h \
	edit-find-tool.h \
	edit-find.h \
	edit-paste-tool.h \
	edit-paste.h \
	edit-redo-tool.h \
	edit-redo.h \
	edit-select-all-tool.h \
	edit-select-all.h \
	edit-undo-tool.h \
	edit-undo.h \
	file-binary-16.h \
	file-binary-32.h \
	file-image-16.h \
	file-image-32.h \
	file-text-16.h \
	file-text-32.h \
	go-down-tool.h \
	go-down.h \
	go-jump-tool.h \
	go-jump.h \
	go-next-tool.h \
	go-next.h \
	go-previous-tool.h \
	go-previous.h \
	go-up-tool.h \
	go-up.h \
	list-add-tool.h \
	list-add.h \
	list-remove-tool.h \
	list-remove.h \
	messagebox-error.h \
	messagebox-information.h \
	messagebox-question.h \
	messagebox-warning.h \
	process-stop-tool.h \
	process-stop.h \
	seahorse.h \
	seahorse-tool.h \
	snapshot.h \
	subfile-close.h \
	subfile-export.h \
	subfile-import.h \
	subfile-new-tool.h \
	subfile-new.h \
	subfile-open-tool.h \
	subfile-open.h \
	subfile-properties.h

EXTRA_DIST = \
	application-about-tool.png \
	application-about.png \
	application-exit-tool.png \
	application-exit.png \
	application-preferences-tool.png \
	application-preferences.png \
	container-close.png \
	container-open-tool.png \
	container-open.png \
	container-password.png \
	container-properties-tool.png \
	container-properties.png \
	container-revert-tool.png \
	container-revert.png \
	container-save-as-tool.png \
	container-save-as.png \
	container-save-tool.png \
	container-save.png \
	container-showlist-tool.png \
	container-showlist.png \
	edit-clear-tool.png \
	edit-clear.png \
	edit-copy-tool.png \
	edit-copy.png \
	edit-cut-tool.png \
	edit-cut.png \
	edit-delete-tool.png \
	edit-delete.png \
	edit-find-replace-tool.png \
	edit-find-replace.png \
	edit-find-tool.png \
	edit-find.png \
	edit-paste-tool.png \
	edit-paste.png \
	edit-redo-tool.png \
	edit-redo.png \
	edit-select-all-tool.png \
	edit-select-all.png \
	edit-undo-tool.png \
	edit-undo.png \
	file-binary-16.png \
	file-binary-32.png \
	file-image-16.png \
	file-image-32.png \
	file-text-16.png \
	file-text-32.png \
	go-down-tool.png \
	go-down.png \
	go-jump-tool.png \
	go-jump.png \
	go-next-tool.png \
	go-next.png \
	go-previous-tool.png \
	go-previous.png \
	go-up-tool.png \
	go-up.png \
	list-add-tool.png \
	list-add.png \
	list-remove-tool.png \
	list-remove.png \
	messagebox-error.png \
	messagebox-information.png \
	messagebox-question.png \
	messagebox-warning.png \
	process-stop-tool.png \
	process-stop.png \
	seahorse.png \
	seahorse-tool.png \
	seahorse.svg \
	snapshot.png \
	snapshot.xcf \
	subfile-close.png \
	subfile-export.png \
	subfile-import.png \
	subfile-new-tool.png \
	subfile-new.png \
	subfile-open-tool.png \
	subfile-open.png \
	subfile-properties.png
